--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Applications</h1>
 
+<%= button_to "New Application", "/applications/new", method: :get %>
+
 <% @application.each do |application| %>
   <h3><%= link_to application.name, "applications/#{application.id}" %></h3>
 <% end %>
