feat: add explainer paragraph to welcome page

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,4 +1,9 @@
 <h1>Adopt, don't shop!</h1>
 
+<p>Welcome to Adopt, Don't Shop!</p>
+<p>This website is a group project from the 2305 Back-End cohort of the Turing School of Software and Design.</p>
+<p>This site was created by Allen Russell, Paul Bennett, and Ethan Black as a group project for the Turing School of Software and Design's 2305 Back-End program.</p>
+
+
 <p><%= link_to "View Applications", "/applications" %></p>
 
